--- a/4/index.html
+++ b/4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html class="page" lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,17 +8,19 @@
   <base href="https://htmlacademy-adaptive.github.io/2148825-cat-energy-27/4/">
 </head>
 <body class="page__body">
-<header class="main-header container">
+<header class="main-header">
+  <div class="main-header__wrapper">
     <a class="main-header__logo" href="#">
       <img class="main-header__logo-image" src="img/logo-cat-energy-image.svg" width="191" height="38" alt="Логотип Cat Energy">
     </a>
-  <nav class="main-header__nav main-nav">
-    <button class="main-nav__toggle">
+    <button class="main-header__toggle">
         <span class="visually-hidden">
           Открыть меню.
         </span>
     </button>
-    <ul class="main-nav__list navigation-list">
+  </div>
+  <nav class="main-header__nav">
+    <ul class="main-header__list navigation-list">
       <li class="navigation-list__item">
         <a class="navigation-list__link navigation-list__link--index navigation-list__link--current navigation-list__link--index--current" href="#">
           Главная
@@ -41,18 +43,18 @@
   <h1 class="visually-hidden">
     Интернет-магазин фитнес еды для котиков "Cat energy".
   </h1>
-  <section class="banner container">
-    <div class="banner__wrapper">
-    <h2 class="banner__title">
-      Функциональное питание для котов
-    </h2>
-    <p class="banner__slogan">
-      Занялся собой? Займись котом!
-    </p>
-    <img class="banner__image" src="img/can-image.png" width="280" height="270" alt="Оранжевая банка кошачьего корма с курицей">
-    <a class="banner__button button" href="form.html">
-      Подобрать программу
-    </a>
+  <section class="banner">
+    <div class="banner__wrapper container">
+      <h2 class="banner__title">
+        Функциональное питание для котов
+      </h2>
+      <p class="banner__slogan">
+        Занялся собой? Займись котом!
+      </p>
+      <img class="banner__image" src="img/can-image.png" width="280" height="270" alt="Оранжевая банка кошачьего корма с курицей">
+      <a class="banner__button button" href="form.html">
+        Подобрать программу
+      </a>
     </div>
   </section>
   <section class="approaches container">
@@ -113,42 +115,52 @@
       </li>
     </ul>
   </section>
-  <section class="live-example container">
-    <div class="live-example__text-wrapper">
-    <h2 class="live-example__title">
-      Живой пример
-    </h2>
-    <p class="live-example__description">
-      Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-      изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-    </p>
-    <div class="live-example__wrapper estimate">
-      <div class="estimate__wrapper">
-        <div class="estimate__item estimate-item">
-          <p class="estimate-item__value">
-            5 кг
+  <section class="live-example">
+    <div class="live-example__container container">
+      <div class="live-example__text-wrapper">
+        <h2 class="live-example__title">
+          Живой пример
+        </h2>
+        <p class="live-example__description">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <div class="live-example__wrapper estimate">
+          <div class="estimate__wrapper">
+            <div class="estimate__item estimate-item">
+              <p class="estimate-item__value">
+                5 кг
+              </p>
+              <small class="estimate-item__parameter">
+                снижение веса
+              </small>
+            </div>
+            <div class="estimate__item estimate-item">
+              <p class="estimate-item__value">
+                60 дней
+              </p>
+              <small class="estimate-item__parameter">
+                затрачено времени
+              </small>
+            </div>
+          </div>
+          <p class="estimate__price">
+            Затраты на питание: 15 000 РУБ.
           </p>
-          <small class="estimate-item__parameter">
-            снижение веса
-          </small>
-        </div>
-        <div class="estimate__item estimate-item">
-          <p class="estimate-item__value">
-            60 дней
-          </p>
-          <small class="estimate-item__parameter">
-            затрачено времени
-          </small>
         </div>
       </div>
-      <p class="estimate__price">
-        Затраты на питание: 15 000 РУБ.
-      </p>
-    </div>
-    </div>
-    <div class="live-example__slider before-after">
-      <img class="before-after__image-before" src="img/example-before.png" width="280" height="256" alt="Фото кота до питания кормом cat-energy">
-      <img class="before-after__image-after" src="img/example-after.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным">
+      <div class="live-example__slider before-after">
+        <div class="before-after__wrapper before-after__wrapper--1">
+          <img class="before-after__image-before" src="img/example-before.png" width="280" height="256" alt="Фото кота до питания кормом cat-energy">
+        </div>
+        <div class="before-after__wrapper before-after__wrapper--2">
+          <img class="before-after__image-after" src="img/example-after.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным">
+        </div>
+        <div class="before-after__toggle">
+          <button class="before-after__toggle-button" type="button">
+          </button>
+        </div>
+      </div>
     </div>
   </section>
   <section class="location">
@@ -171,40 +183,42 @@
     <img class="location__image" src="img/map.jpg" width="320" height="362" alt="Карта расположения Cat Energy">
   </section>
 </main>
-<footer class="page-footer container">
-  <a class="page-footer__logo-cat-energy" href="#">
-    <img class="page-footer__logo-cat-energy-image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
-  </a>
-  <ul class="page-footer__social-list social-list">
-    <li class="social-list__item">
-      <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy">
+<footer class="page-footer">
+  <div class="page-footer__container container">
+    <a class="page-footer__logo-cat-energy" href="#">
+      <img class="page-footer__logo-cat-energy-image" src="img/logo-cat-energy-title.svg" width="101" height="18" alt="Cat Energy">
+    </a>
+    <ul class="page-footer__social-list social-list">
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy">
         <span class="visually-hidden">
           Vkontakte.
         </span>
-      </a>
-    </li>
-    <li class="social-list__item">
-      <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
         <span class="visually-hidden">
           YouTube.
         </span>
-      </a>
-    </li>
-    <li class="social-list__item">
-      <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy">
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy">
         <span class="visually-hidden">
           Telegram.
         </span>
+        </a>
+      </li>
+    </ul>
+    <div class="page-footer__html-academy-logo-wrapper">
+      <a class="page-footer__html-academy-logo-text" href="https://htmlacademy.ru">
+        HTML Academy
       </a>
-    </li>
-  </ul>
-  <div class="page-footer__html-academy-logo-wrapper">
-    <a class="page-footer__html-academy-logo-text" href="https://htmlacademy.ru">
-      HTML Academy
-    </a>
-    <a class="page-footer__html-academy-logo" href="https://htmlacademy.ru">
-      <img class="page-footer__html-academy-logo-image" src="img/html-academy-logo.svg" width="27" height="34" alt="">
-    </a>
+      <a class="page-footer__html-academy-logo" href="https://htmlacademy.ru">
+        <img class="page-footer__html-academy-logo-image" src="img/html-academy-logo.svg" width="27" height="34" alt="">
+      </a>
+    </div>
   </div>
 </footer>
 </body>
