--- a/source/form.html
+++ b/source/form.html
@@ -4,13 +4,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cat Energy</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="page__body">
 <header class="main-header main-header--nojs">
   <div class="main-header__wrapper">
     <a class="main-header__logo" href="index.html">
-      <img class="main-header__logo-image" src="img/logo-cat-energy-image.svg" width="191" height="38" alt="Логотип Cat Energy">
+      <picture>
+        <source media="(min-width: 768px)" srcset="img/logo-cat-energy-image-tablet.svg">
+        <img class="main-header__logo-image" src="img/logo-cat-energy-image-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
+      </picture>
     </a>
     <button class="main-header__toggle main-header__toggle--closed main-header__toggle--nojs" type="button">
         <span class="visually-hidden">
