Добавляет изображение в формате webp

--- a/source/index.html
+++ b/source/index.html
@@ -58,7 +58,7 @@
         Занялся собой? Займись котом!
       </p>
       <picture>
-        <source media="(min-width: 1440px)" srcset="img/index-can-1x.png 1x, img/index-can-2x.png 2x">
+        <source media="(min-width: 1440px)" srcset="img/index-can-1x.webp 1x, img/index-can-2x.webp 2x">
         <source media="(min-width: 768px)" srcset="img/can-tablet-1x.png 1x, img/can-tablet-2x.png 2x">
         <img class="banner__image" src="img/can-mobile-1x.png" srcset="img/can-mobile-2x.png 2x" width="280" height="270" alt="Оранжевая банка кошачьего корма с курицей">
       </picture>
