--- a/source/catalog.html
+++ b/source/catalog.html
@@ -62,7 +62,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-1-tablet.webp 1x, img/catalog/catalog-1-tablet-2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/catalog/catalog-1-tablet.png 1x, img/catalog/catalog-1-tablet-2x.png 2x">
             <source type="image/webp" srcset="img/catalog/catalog-1-mobile.webp 1x, img/catalog/catalog-1-mobile-2x.webp 2x">
-            <img class="product-card__image" src="img/catalog/catalog-1-mobile.png" srcset="img/catalog/catalog-1-mobile-2x.png" width="140" height="112" alt="">
+            <img class="product-card__image" src="img/catalog/catalog-1-mobile.png" srcset="img/catalog/catalog-1-mobile-2x.png 2x" width="140" height="112" alt="">
           </picture>
         </a>
         <a class="product-card__title-link" href="#">
@@ -108,7 +108,7 @@
               <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-2-tablet.webp 1x, img/catalog/catalog-2-tablet-2x.webp 2x">
               <source media="(min-width: 768px)" srcset="img/catalog/catalog-2-tablet.png 1x, img/catalog/catalog-2-tablet-2x.png 2x">
               <source type="image/webp" srcset="img/catalog/catalog-2-mobile.webp 1x, img/catalog/catalog-2-mobile-2x.webp 2x">
-              <img class="product-card__image" src="img/catalog/catalog-2-mobile.png" srcset="img/catalog/catalog-2-mobile-2x.png" width="140" height="112" alt="">
+              <img class="product-card__image" src="img/catalog/catalog-2-mobile.png" srcset="img/catalog/catalog-2-mobile-2x.png 2x" width="140" height="112" alt="">
             </picture>
           </a>
         <a class="product-card__title-link" href="#">
@@ -154,7 +154,7 @@
               <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-3-tablet.webp 1x, img/catalog/catalog-3-tablet-2x.webp 2x">
               <source media="(min-width: 768px)" srcset="img/catalog/catalog-3-tablet.png 1x, img/catalog/catalog-3-tablet-2x.png 2x">
               <source type="image/webp" srcset="img/catalog/catalog-3-mobile.webp 1x, img/catalog/catalog-3-mobile-2x.webp 2x">
-              <img class="product-card__image" src="img/catalog/catalog-3-mobile.png" srcset="img/catalog/catalog-3-mobile-2x.png" width="140" height="112" alt="">
+              <img class="product-card__image" src="img/catalog/catalog-3-mobile.png" srcset="img/catalog/catalog-3-mobile-2x.png 2x" width="140" height="112" alt="">
             </picture>
           </a>
         <a class="product-card__title-link" href="#">
@@ -200,7 +200,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-4-tablet.webp 1x, img/catalog/catalog-4-tablet-2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/catalog/catalog-4-tablet.png 1x, img/catalog/catalog-4-tablet-2x.png 2x">
             <source type="image/webp" srcset="img/catalog/catalog-4-mobile.webp 1x, img/catalog/catalog-4-mobile-2x.webp 2x">
-            <img class="product-card__image" src="img/catalog/catalog-4-mobile.png" srcset="img/catalog/catalog-4-mobile-2x.png" width="140" height="112" alt="">
+            <img class="product-card__image" src="img/catalog/catalog-4-mobile.png" srcset="img/catalog/catalog-4-mobile-2x.png 2x" width="140" height="112" alt="">
           </picture>
         </a>
         <a class="product-card__title-link" href="#">
@@ -246,7 +246,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-5-tablet.webp 1x, img/catalog/catalog-5-tablet-2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/catalog/catalog-5-tablet.png 1x, img/catalog/catalog-5-tablet-2x.png 2x">
             <source type="image/webp" srcset="img/catalog/catalog-5-mobile.webp 1x, img/catalog/catalog-5-mobile-2x.webp 2x">
-            <img class="product-card__image" src="img/catalog/catalog-5-mobile.png" srcset="img/catalog/catalog-5-mobile-2x.png" width="140" height="112" alt="">
+            <img class="product-card__image" src="img/catalog/catalog-5-mobile.png" srcset="img/catalog/catalog-5-mobile-2x.png 2x" width="140" height="112" alt="">
           </picture>
         </a>
         <a class="product-card__title-link" href="#">
@@ -292,7 +292,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-6-tablet.webp 1x, img/catalog/catalog-6-tablet-2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/catalog/catalog-6-tablet.png 1x, img/catalog/catalog-6-tablet-2x.png 2x">
             <source type="image/webp" srcset="img/catalog/catalog-6-mobile.webp 1x, img/catalog/catalog-6-mobile-2x.webp 2x">
-            <img class="product-card__image" src="img/catalog/catalog-6-mobile.png" srcset="img/catalog/catalog-6-mobile-2x.png" width="140" height="112" alt="">
+            <img class="product-card__image" src="img/catalog/catalog-6-mobile.png" srcset="img/catalog/catalog-6-mobile-2x.png 2x" width="140" height="112" alt="">
           </picture>
         </a>
         <a class="product-card__title-link" href="#">
@@ -338,7 +338,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/catalog-7-tablet.webp 1x, img/catalog/catalog-7-tablet-2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/catalog/catalog-7-tablet.png 1x, img/catalog/catalog-7-tablet-2x.png 2x">
             <source type="image/webp" srcset="img/catalog/catalog-7-mobile.webp 1x, img/catalog/catalog-7-mobile-2x.webp 2x">
-            <img class="product-card__image" src="img/catalog/catalog-7-mobile.png" srcset="img/catalog/catalog-7-mobile-2x.png" width="140" height="112" alt="">
+            <img class="product-card__image" src="img/catalog/catalog-7-mobile.png" srcset="img/catalog/catalog-7-mobile-2x.png 2x" width="140" height="112" alt="">
           </picture>
         </a>
         <a class="product-card__title-link" href="#">
