--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,6 +9,9 @@
   <link rel="apple-touch-icon" href="img/favicons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.min.css" rel="stylesheet">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
 <body class="page__body">
 <header class="main-header main-header--nojs">
@@ -67,7 +70,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy PRO 500 г
+            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> PRO&nbsp;<br class="product-card__tablet-wrap"> 500 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -113,7 +116,7 @@
           </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy PRO 1000 г
+            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> PRO&nbsp;<br class="product-card__tablet-wrap">1000 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -159,7 +162,7 @@
           </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy PRO 500 г
+            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> PRO&nbsp;<br class="product-card__tablet-wrap">500 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -205,7 +208,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy PRO 1000 г
+            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> PRO&nbsp;<br class="product-card__tablet-wrap">1000 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -251,7 +254,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy slim 500 г
+            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> slim&nbsp;<br class="product-card__tablet-wrap">500 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -297,7 +300,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy slim 1000 г
+            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> slim&nbsp;<br class="product-card__tablet-wrap">1000 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -343,7 +346,7 @@
         </a>
         <a class="product-card__title-link" href="#">
           <h3 class="product-card__title">
-            Cat Energy slim 500 г
+            Cat Energy&nbsp;<br class="product-card__mobile-wrap"> slim&nbsp;<br class="product-card__tablet-wrap">500 г
           </h3>
         </a>
         <dl class="product-card__properties-list">
@@ -472,7 +475,7 @@
       </div>
       <div class="additional-products__gift">
         <p class="additional-products__gift-paragraph">
-          Закажите все и получите чехол для кота в подарок!
+          Закажите все <br class="additional-products__mobile-wrap"> и получите чехол для кота в подарок!
         </p>
       </div>
     </div>
@@ -484,7 +487,7 @@
     <div class="location__container">
       <div class="location__wrapper container">
         <p class="location__invitation">
-          Приглашаем к сотрудничеству дилеров!
+          Приглашаем<br class="location__mobile-wrap"> к сотрудничеству дилеров!
         </p>
         <address class="location__address address-text">
           <p class="address-text__paragraph">
