--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,9 @@
   <link rel="apple-touch-icon" href="img/favicons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link href="css/style.min.css" rel="stylesheet">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
 <body class="page__body">
 <header class="main-header main-header--nojs">
@@ -65,7 +68,7 @@
         <source type="image/webp" srcset="img/can-mobile-1x.webp 1x, img/can-mobile-2x.webp 2x">
         <img class="banner__image" src="img/can-mobile-1x.png" srcset="img/can-mobile-2x.png 2x" width="280" height="270" alt="Оранжевая банка кошачьего корма с курицей">
       </picture>
-      <a class="banner__button button" href="form.html">
+      <a class="banner__button button button--index" href="form.html">
         Подобрать программу
       </a>
     </div>
@@ -106,24 +109,24 @@
       Как это работает
     </h2>
     <ul class="principles-of-work__list">
-      <li class="principles-of-work__item principles-of-work__item--one">
+      <li class="principles-of-work__item">
         <p class="principles-of-work__description principles-of-work__description--nutrients">
           Функциональное питание содержит только полезные питательные вещества.
         </p>
       </li>
-      <li class="principles-of-work__item principles-of-work__item--two">
+      <li class="principles-of-work__item">
         <p class="principles-of-work__description principles-of-work__description--powder">
           Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
         </p>
       </li>
-      <li class="principles-of-work__item principles-of-work__item--three">
+      <li class="principles-of-work__item">
         <p class="principles-of-work__description principles-of-work__description--replacement">
           Замените один-два приема обычной еды на наше функциональное питание.
         </p>
       </li>
-      <li class="principles-of-work__item principles-of-work__item--four">
+      <li class="principles-of-work__item">
         <p class="principles-of-work__description principles-of-work__description--period">
-          Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          Уже через месяц наслаждайтесь изменениями к лучшему&nbsp;<br class="principles-of-work__tablet-wrap">вашего питомца!
         </p>
       </li>
     </ul>
@@ -158,7 +161,10 @@
             </div>
           </div>
           <p class="estimate__price">
-            Затраты на питание: 15 000 РУБ.
+            Затраты на питание:
+            <span class="estimate__price-number">
+              15 000 РУБ.
+            </span>
           </p>
         </div>
       </div>
@@ -168,7 +174,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/before-desktop-1x.webp 1x, img/before-desktop-2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/before-desktop-1x.png 1x, img/before-desktop-2x.png 2x">
             <source type="image/webp" srcset="img/before-mobile-1x.webp 1x, img/before-mobile-2x.webp 2x">
-            <img class="before-after__image-before" src="img/before-mobile-1x.png" srcset="img/before-mobile-2x.png" width="280" height="256" alt="Фото кота до питания кормом cat-energy">
+            <img class="before-after__image-before" src="img/before-mobile-1x.png" srcset="img/before-mobile-2x.png" width="280" height="256" alt="Фото кота до питания кормом cat-energy" loading="lazy">
           </picture>
         </div>
         <div class="before-after__wrapper before-after__wrapper--2">
@@ -176,7 +182,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/after-desktop-1x.webp 1x, img/after-desktop-2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/after-desktop-1x.png 1x, img/after-desktop-2x.png 2x">
             <source type="image/webp" srcset="img/after-mobile-1x.webp 1x, img/after-mobile-2x.webp 2x">
-            <img class="before-after__image-after" src="img/after-mobile-1x.png" srcset="img/after-mobile-2x.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным">
+            <img class="before-after__image-after" src="img/after-mobile-1x.png" srcset="img/after-mobile-2x.png" width="280" height="256" alt="Фото кота после питания кормом cat-energy, теперь он выглядит более стройным"  loading="lazy">
           </picture>
         </div>
         <div class="before-after__toggle">
@@ -194,7 +200,7 @@
     <div class="location__container">
       <div class="location__wrapper location__wrapper--index container">
         <p class="location__invitation">
-          Приглашаем к сотрудничеству дилеров!
+          Приглашаем<br class="location__mobile-wrap"> к сотрудничеству дилеров!
         </p>
         <address class="location__address address-text">
           <p class="address-text__paragraph">
