--- a/source/index.html
+++ b/source/index.html
@@ -109,7 +109,7 @@
       Как это работает
     </h2>
     <ul class="principles-of-work__list">
-      <li class="principles-of-work__item">
+      <li class="principles-of-work__item principles-of-work__item--first">
         <p class="principles-of-work__description principles-of-work__description--nutrients">
           Функциональное питание содержит только полезные питательные вещества.
         </p>
