--- a/source/form.html
+++ b/source/form.html
@@ -207,7 +207,15 @@
         </address>
       </div>
     </div>
-    <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1671792798573!5m2!1sen!2sru" width="320" height="362" allowfullscreen title="Карта расположения Cat Energy"></iframe>
+    <picture>
+      <source type="image/webp" media="(min-width: 1440px)" srcset="img/map-desktop-1x.webp 1x, img/map-desktop-2x.webp 2x">
+      <source media="(min-width: 1440px)" srcset="img/map-desktop-1x.png 1x, img/map-desktop-2x.png 2x">
+      <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet-1x.webp 1x, img/map-tablet-2x.webp 2x">
+      <source media="(min-width: 768px)" srcset="img/map-tablet-1x.png 1x, img/map-tablet-2x.png 2x">
+      <source type="image/webp" srcset="img/map-mobile-1x.webp 1x, img/map-mobile-2x.webp 2x">
+      <img class="location__map-image location__map-image--nojs" src="img/map-mobile-1x.png" srcset="img/map-mobile-2x.png" width="320" height="362"  alt="Карта местонахождения офиса Cat energy" loading="lazy">
+    </picture>
+    <iframe class="location__map location__map--nojs" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1671792798573!5m2!1sen!2sru" width="320" height="362" allowfullscreen title="Карта расположения Cat Energy"></iframe>
   </section>
 </main>
 <footer class="page-footer">
