Добавляет правки после первой попытки

--- a/source/form.html
+++ b/source/form.html
@@ -83,7 +83,6 @@
             <legend class="visually-hidden">
               Желаемые цели.
             </legend>
-            <!-- application-form__radio-label--disabled - класс для неактивной радиокнопки-->
             <label class="application-form__radio-label">
               <input class="application-form__radio-input visually-hidden" type="radio" name="target" value="weight loss" checked>
               <span class="application-form__radio-control-mark">
@@ -140,8 +139,7 @@
           <label class="visually-hidden" for="comment">
             Оставьте комментарий.
           </label>
-          <textarea class="application-form__textarea" id="comment">Расскажите обо всех повадках кота
-        </textarea>
+          <textarea class="application-form__textarea" id="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
       </div>
       <div class="application-form__fieldset-wrapper">
@@ -151,7 +149,6 @@
               Дополнительно
             </h3>
           </div>
-          <!-- application-form__checkbox-label--disabled - класс для неактивного чекбокса-->
           <label class="application-form__checkbox-label">
             <input class="application-form__checkbox-input visually-hidden" type="checkbox" name="added-products" value="sweetener" checked>
             <span class="application-form__checkbox-control-mark">
