--- a/source/index.html
+++ b/source/index.html
@@ -187,6 +187,9 @@
         </div>
         <div class="before-after__toggle">
           <button class="before-after__toggle-button" type="button">
+            <span class="visually-hidden">
+              Переключить фото "до" и "после".
+            </span>
           </button>
           <div class="before-after__toggle-line"></div>
         </div>
